--- a/client/src/components/addForm/addForm.css
+++ b/client/src/components/addForm/addForm.css
@@ -40,3 +40,64 @@ input[name="save"] {
 input[name="save"]:hover {
   box-shadow: 0px 0px 10px rgba(44, 203, 223, 0.6);
 }
+form ul {
+  position: relative;
+  overflow: hidden;
+  margin: 10px 0;
+  padding: 0 5px;
+  width: 100%;
+  height: auto;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #eee), color-stop(15%, #fff));
+  background-image: linear-gradient(#eee 1%, #fff 15%);
+  cursor: text;
+}
+.tags {
+  position: relative;
+  margin: 3px 5px 3px 0;
+  padding: 5px 20px 5px 5px;
+  border: 1px solid #aaa;
+  max-width: 100%;
+  border-radius: 3px;
+  background-color: #eee;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(20%, #f4f4f4),
+    color-stop(50%, #f0f0f0),
+    color-stop(52%, #e8e8e8),
+    to(#eee)
+  );
+  background-image: linear-gradient(#f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
+  background-size: 100% 19px;
+  background-repeat: repeat-x;
+  background-clip: padding-box;
+  -webkit-box-shadow: 0 0 2px #fff inset, 0 1px 0 rgb(0 0 0 / 5%);
+  box-shadow: 0 0 2px #fff inset, 0 1px 0 rgb(0 0 0 / 5%);
+  color: #333;
+  line-height: 13px;
+  cursor: default;
+}
+.tags span {
+  word-wrap: break-word;
+  
+}
+.tags  a {
+  position: absolute;
+  top: 4px;
+  right: 3px;
+  display: block;
+  width: 12px;
+  height: 12px;
+  background: url("../../chosen-sprite.png") -42px 1px no-repeat;
+  font-size: 1px;
+}
+.tags__container * {
+  box-sizing: border-box;
+}
+.tags__container li {
+  float: left;
+  list-style: none;
+}
