--- a/client/src/components/addForm/addForm.css
+++ b/client/src/components/addForm/addForm.css
@@ -101,3 +101,25 @@ form ul {
   float: left;
   list-style: none;
 }
+input[type=checkbox], input[type=radio] {display: none;}
+
+input[type=checkbox] + label:after {
+    content: "\2714";
+    color: transparent;
+    display: inline-block;
+    border: 1px solid #ccc;
+    font-size: 20px;
+    font-weight: 900;
+    line-height: 18px;
+    margin: 0px 0px 0 5px;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    vertical-align: middle;
+    transition: color ease .3s;
+}
+
+input[type=checkbox]:checked + label:after {
+    color: #000;
+  border-color: #000;
+}
