--- a/client/src/components/addForm/addForm.css
+++ b/client/src/components/addForm/addForm.css
@@ -91,7 +91,7 @@ form ul {
   display: block;
   width: 12px;
   height: 12px;
-  background: url("../../chosen-sprite.png") -42px 1px no-repeat;
+  background: url("../../images/chosen-sprite.png") -42px 1px no-repeat;
   font-size: 1px;
 }
 .tags__container * {
