--- a/client/src/views/PostPage/postPage.scss
+++ b/client/src/views/PostPage/postPage.scss
@@ -4,7 +4,8 @@
   margin-left: 15px;
   margin-bottom: 8px;
   margin-right: 25px;
-  min-height: 170px;
+  border: 1px solid #81a03c;
+  padding: 2px;
   & img {
     width: 100%;
     object-fit: contain;
@@ -56,6 +57,7 @@
     text-align: justify;
     margin: 0 5px;
     padding: 15px;
+    padding-top: 6px;
   }
 
   &__portion {
