--- a/client/src/components/Post/post.css
+++ b/client/src/components/Post/post.css
@@ -1,6 +1,6 @@
 .post {
   border: 5px solid #ece3da;
-  max-width: 700px;
+  width: 675px;
   margin: 20px 20px 10px;
 }
 
@@ -43,7 +43,7 @@
 
 .post__img {
   position: relative;
-  width: 350px;
+  width: 210px;
   margin: 15px 0 15px 15px;
   border: 1px solid #81a03c;
   height: 170px;
@@ -52,7 +52,7 @@
 
 .post__img img {
   height: 100%;
-  width: auto;
+  width: 100%;
 }
 
 .post__description {
@@ -72,4 +72,8 @@
   background: #ece3da;
   padding: 10px;
   font-size: 16px;
+}
+
+.post__author {
+  margin-right: auto;
 }
