--- a/client/src/components/addForm/addForm.css
+++ b/client/src/components/addForm/addForm.css
@@ -6,6 +6,47 @@ label {
   font-size: 110%;
   font-weight: bold;
 }
+#recipes_photo {
+  opacity: 1;
+  position: absolute;
+  z-index: -1;
+  overflow: hidden;
+  width: 0.4px;
+  height: 0.4px;
+}
+.upload-file__label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 240px;
+  border: 2px dashed #150b22;
+  padding: 9px 49px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.upload-file__icon {
+  width: 30px;
+  height: auto;
+  margin-right: 11px;
+}
+
+.upload-file__label .upload-file__text,
+.upload-file__label .upload-file__icon path {
+  transition: 0.25s ease;
+}
+
+.upload-file__label:hover .upload-file__text {
+  color: #58862d;
+}
+
+.upload-file__label:hover .upload-file__icon path {
+  fill: #58862d;
+}
+
+.upload-file__label:hover {
+  border: 2px dashed #58862d;
+}
 .comment {
   padding: 4px 0 0 10px;
   vertical-align: top;
@@ -105,7 +146,7 @@ input[type="radio"] {
   display: none;
 }
 textarea {
-  white-space: pre-line
+  white-space: pre-line;
 }
 input[type="checkbox"] + label:after {
   content: "\2714";
