--- a/client/src/views/PostPage/postPage.css
+++ b/client/src/views/PostPage/postPage.css
@@ -13,6 +13,14 @@
   height: 100%;
 }
 
+.page__recipe {
+  padding-top: 15px;
+  text-align: left;
+  letter-spacing: 0.5px;
+  margin: 0px auto;
+  max-width: 450px;
+}
+
 .page__title {
   margin-top: 10px;
   font-size: 24px;
