--- a/client/src/views/PostPage/postPage.css
+++ b/client/src/views/PostPage/postPage.css
@@ -13,6 +13,14 @@
   height: 100%;
 }
 
+.page__edit {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  width: 26px;
+  height: 26px;
+}
+
 .page__recipe {
   padding-top: 15px;
   text-align: left;
@@ -31,6 +39,10 @@
   margin-left: 27px;
   font-weight: bold;
   margin-bottom: -10px;
+}
+
+.page__wrapper {
+  position: relative;
 }
 
 .page__head {
@@ -77,7 +89,7 @@
 
 .page__portion::before {
   content: "";
-  background: url("../../images/bowl-hot-solid-24.png") center/18px 18px no-repeat;
+  background: url("../../images/bowl-hot-solid-24.png") center/16px 16px no-repeat;
   padding: 10px;
   margin-right: 7px;
 }
@@ -88,7 +100,7 @@
 
 .page__time::before {
   content: "";
-  background: url("../../images/time.png") center/18px 18px no-repeat;
+  background: url("../../images/time.png") center/16px 16px no-repeat;
   padding: 10px;
   margin-right: 7px;
 }
@@ -99,9 +111,16 @@
 
 .page__author::before {
   content: "";
-  background: url("../../images/author.png") center/18px 18px no-repeat;
+  background: url("../../images/author.png") center/16px 16px no-repeat;
   padding: 10px;
   margin-right: 7px;
+}
+
+.page__about-text {
+  display: inline-block;
+  padding-left: 20px;
+  font-size: 20px;
+  font-style: italic;
 }
 
 .page__table {
