--- a/client/src/views/PostPage/postPage.scss
+++ b/client/src/views/PostPage/postPage.scss
@@ -1,5 +1,4 @@
 .page__img {
-  // max-width: 225px;
   float: left;
   height: 170px;
   margin-left: 15px;
@@ -10,7 +9,6 @@
   & img {
     width: auto;
     height: 100%;
-    // max-width: 225px;
   }
 }
 .post {
@@ -18,6 +16,13 @@
   }
 }
 .page {
+  &__edit {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    width: 26px;
+    height: 26px;
+  }
   &__recipe {
     padding-top: 15px;
     text-align: left;
@@ -35,6 +40,7 @@
     margin-bottom: -10px;
   }
   &__wrapper {
+    position: relative;
   }
   &__head {
     font-size: 17px;
@@ -75,7 +81,7 @@
     margin: 5px 0;
     &::before {
       content: "";
-      background: url("../../images/bowl-hot-solid-24.png") center/ 18px 18px no-repeat;
+      background: url("../../images/bowl-hot-solid-24.png") center/ 16px 16px no-repeat;
       padding: 10px;
       margin-right: 7px;
     }
@@ -84,7 +90,7 @@
     margin: 5px 0;
     &::before {
       content: "";
-      background: url("../../images/time.png") center/ 18px 18px no-repeat;
+      background: url("../../images/time.png") center/ 16px 16px no-repeat;
       padding: 10px;
       margin-right: 7px;
     }
@@ -94,13 +100,17 @@
     margin: 5px 0;
     &::before {
       content: "";
-      background: url("../../images/author.png") center/ 18px 18px no-repeat;
+      background: url("../../images/author.png") center/ 16px 16px no-repeat;
       padding: 10px;
       margin-right: 7px;
     }
   }
 
   &__about-text {
+    display: inline-block;
+    padding-left: 20px;
+    font-size: 20px;
+    font-style: italic;
   }
   &__table {
     text-align: left;
