--- a/client/src/components/Post/post.scss
+++ b/client/src/components/Post/post.scss
@@ -8,6 +8,7 @@
     background: none;
     border: none;
     font-size: 17px;
+    margin: 10px 0;
     transition: all 0.1s ease 0s;
     &:hover {
       text-decoration: underline;
@@ -40,15 +41,15 @@
   padding: 2px;
   & img {
     height: 100%;
-    width: 100%;
-    // object-fit: cover; 
+    width: 210px;
+    // object-fit: fill; 
   }
 }
 .post__description {
   text-align: justify;
-  padding: 0px 9px;
+  padding: 0px 20px 0 0;
   margin-top: 15px;
-  font-size: 18px;
+  font-size: 17px;
 }
 .post__footer {
   display: flex;
