--- a/client/src/views/PostPage/postPage.scss
+++ b/client/src/views/PostPage/postPage.scss
@@ -25,17 +25,17 @@
   }
   &__recipe {
     padding-top: 15px;
-    text-align: left;
+    text-align: justify;
     letter-spacing: 0.5px;
     margin: 0px auto;
-    max-width: 450px;
+    max-width: 550px;
   }
   &__title {
     margin-top: 10px;
     font-size: 24px;
     color: #e39915;
     align-self: start;
-    margin-left: 27px;
+    margin-left: 47px;
     font-weight: bold;
     margin-bottom: -10px;
   }
@@ -45,7 +45,7 @@
   &__head {
     font-size: 17px;
     width: 100%;
-    margin-left: 100px;
+    padding-left: 100px;
   }
   &__card {
     width: 70%;
@@ -105,12 +105,31 @@
       margin-right: 7px;
     }
   }
+  &__date-create {
+    margin: 5px 0;
+    &::before {
+      content: "";
+      background: url("../../images/calendar.png") center/ 16px 16px no-repeat;
+      padding: 10px;
+      margin-right: 7px;
+    }
+  }
+  &__date-update {
+    margin: 5px 0;
+    &::before {
+      content: "";
+      background: url("../../images/update.png") center/ 16px 16px no-repeat;
+      padding: 10px;
+      margin-right: 7px;
+    }
+  }
 
   &__about-text {
     display: inline-block;
-    padding-left: 20px;
+    padding-left: 12px;
     font-size: 20px;
     font-style: italic;
+    margin: 0 15px 15px 0;
   }
   &__table {
     text-align: left;
@@ -121,7 +140,7 @@
     & table {
       width: 60%;
       font-size: 18px;
-      margin-left: 20px;
+      margin-left: 50px;
       margin-bottom: 10px;
       border-spacing: 2px;
       & td {
