--- a/client/src/views/PostPage/postPage.css
+++ b/client/src/views/PostPage/postPage.css
@@ -21,12 +21,28 @@
   height: 26px;
 }
 
+.page__favorite {
+  position: absolute;
+  top: 20px;
+  -webkit-transition: all .7s ease 0s;
+  transition: all .7s ease 0s;
+  right: 75px;
+  width: 28px;
+  height: 28px;
+}
+
+.page__favorite:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
 .page__recipe {
   padding-top: 15px;
   text-align: justify;
   letter-spacing: 0.5px;
   margin: 0px auto;
   max-width: 550px;
+  margin-bottom: 30px;
 }
 
 .page__title {
@@ -139,11 +155,15 @@
 }
 
 .page__about-text {
-  display: inline-block;
   padding-left: 12px;
   font-size: 20px;
   font-style: italic;
   margin: 0 15px 15px 0;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .page__table {
