--- a/client/src/components/Post/post.scss
+++ b/client/src/components/Post/post.scss
@@ -22,7 +22,7 @@
     background: #ece3da;
     border-radius: 0px 0 15px 15px;
     font-size: 22px;
-    padding: 5px;
+    padding: 5px 20px;
     display: inline-block;
     min-width: 313px;
     max-width: 520px;
