--- a/client/src/components/addForm/addForm.css
+++ b/client/src/components/addForm/addForm.css
@@ -5,6 +5,7 @@ label {
   width: 100%;
   font-size: 110%;
   font-weight: bold;
+  position: relative;
 }
 #recipes_photo {
   opacity: 1;
@@ -206,4 +207,12 @@ input[type="checkbox"] + label:after {
 input[type="checkbox"]:checked + label:after {
   color: #000;
   border-color: #000;
+}
+.img-preview{
+  width: 200px;
+  height: 125px;
+  border: 1px solid black;
+  margin-left: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
