--- a/client/src/components/addForm/addForm.css
+++ b/client/src/components/addForm/addForm.css
@@ -79,6 +79,9 @@ button[name="save"] {
   outline: none;
   transition: all 0.4s ease;
 }
+.upload-file__text {
+  display: contents;
+}
 button[name="delete"] {
   margin: 25px 0 10px 0;
   padding: 0px 36px;
@@ -161,6 +164,7 @@ form ul {
 }
 .tags span {
   word-wrap: break-word;
+  display: contents;
 }
 .tags a {
   position: absolute;
@@ -201,14 +205,14 @@ input[type="checkbox"] + label:after {
   vertical-align: middle;
   transition: color ease 0.3s;
 }
-.field{
+.field {
   text-align: center;
 }
 input[type="checkbox"]:checked + label:after {
   color: #000;
   border-color: #000;
 }
-.img-preview{
+.img-preview {
   width: 200px;
   height: 125px;
   border: 1px solid black;
